--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,40 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  background: #0e7e12;
+}
+.contenedor {
+  color: #000000;
+  border-radius: 15px;
+  width: 26%;
+  height: 500px;
+  margin: 100px auto;
+  background: #f3f3f3;
+  position: relative;
+}
+/* A este le cambiamos el color */
+.icono1 {
+  margin-left: 20px;
+}
+.icono1,
+.icono2 {
+  font-size: 100px;
+}
+.num {
+  font-size: 150px;
+}
+
+.icono2 {
+  right: 20px;
+
+  /*  display: flex;
+ align-items: flex-end; */
+  position: absolute;
+  bottom: 0%;
+  width: 100%;
+  transform: rotate(180deg);
+}
+.num {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
