--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,11 @@ p {
   margin: 0;
   padding: 0;
 }
+h2 {
+  text-align: center;
+  background: yellowgreen;
+}
+
 header {
   width: 100%;
   margin: 20px 40px;
@@ -15,7 +20,6 @@ body {
 .resultadoOrdenado {
   margin-top: 100px;
   width: 100%;
-  background: violet;
 }
 .contenedor {
   width: 100%;
@@ -24,6 +28,8 @@ body {
 }
 
 .carta {
+  margin-top: 30px;
+  padding: 5px;
   color: #000000;
   border-radius: 15px;
   width: 80px;
